--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -69,7 +69,7 @@ textarea {
       padding-right: 1em;
     }
     @media (min-width: 1024px) {
-      padding-right: 1.5em;
+      padding-right: 24px;
     }
   }
   input {
